src/test/deca/context/invalid/homemade/tests/test372_appel_methode_inaccessible.deca
// test invalide de la règle 3.72


class A{

    int y = 1;

    void calcul(int valeur){
        this.y = 2*valeur;
    }
}

class B{
    int x;
}


{
    int c = 5;
    B b = new B();
    A a = new A();
    b.calcul(5);
}